--- a/clusters/atlas/pihole/helmrelease.yaml
+++ b/clusters/atlas/pihole/helmrelease.yaml
@@ -17,6 +17,10 @@ spec:
   values:
     DNS1: "1.1.1.1"
     DNS2: "1.0.0.1"
+  
+    ingress:
+      enabled: true
+      ingressCLassName: nginx
 
     persistentVolumeClaim:
       enabled: true
