--- a/clusters/atlas/pihole/helmrelease.yaml
+++ b/clusters/atlas/pihole/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: pihole
-      version: 2.5.2
+      version: 2.5.3
       sourceRef:
         kind: HelmRepository
         name: mojo2600
@@ -17,16 +17,27 @@ spec:
   values:
     DNS1: "1.1.1.1"
     DNS2: "1.0.0.1"
-  
+
     ingress:
       enabled: true
-      ingressCLassName: nginx
+
+      ingressClassName: nginx
+      # annotations:
+      #   cert-manager.io/cluster-issuer: "letsencrypt-production"
+
+      hosts:
+        - pihole.stndrs.home
+
+      # tls:
+      #  - secretName: pihole-tls
+      #    hosts:
+      #      - pihole.${domain}
 
     persistentVolumeClaim:
       enabled: true
 
     serviceDns:
-      type: NodePort
+      type: LoadBalancer
 
     serviceWeb:
-      type: NodePort
+      type: LoadBalancer
